--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+dj-database-url==0.5.0
 Django==2.1.7
 django-crispy-forms==1.9.2
 django-environ==0.4.5
+django-heroku==0.3.1
+psycopg2==2.8.5
 pytz==2020.1
+whitenoise==5.1.0
